--- a/package.json
+++ b/package.json
@@ -2,16 +2,27 @@
   "name": "chat-bot-poker",
   "version": "0.1.0",
   "description": "Sprint planning poker.",
-  "main": "src/PokerBot.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-register"
   },
+  "dependencies": {
+    "bluebird": "^3.5.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-plugin-object-rest-spread": "^0.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-constructor-call": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-do-expressions": "^6.22.0",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
+    "chai": "^3.5.0",
     "mocha": "^3.3.0"
   },
   "babel": {
@@ -20,23 +31,31 @@
         "env",
         {
           "targets": {
-            "node": 7
+            "node": 8
           }
         }
-      ],
-      "stage-0"
+      ]
     ],
     "plugins": [
       [
         "transform-react-jsx",
         {
-          "pragma": "Bot.rule"
+          "pragma": "Rule.create"
         }
-      ]
+      ],
+      [
+        "transform-object-rest-spread",
+        {
+          "useBuiltIns": true
+        }
+      ],
+      "babel-plugin-syntax-dynamic-import",
+      "babel-plugin-transform-class-constructor-call",
+      "babel-plugin-transform-class-properties",
+      "babel-plugin-transform-do-expressions",
+      "babel-plugin-transform-export-extensions",
+      "babel-plugin-transform-function-bind"
     ]
-  },
-  "dependencies": {
-    "chat-bot": "^0.1.0"
   },
   "author": "Adrian Cooney <cooney.adrian@gmail.com>",
   "license": "MIT"
