--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha --compilers js:babel-register"
   },
   "dependencies": {
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "qs": "^6.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
