Async onMount, fixed player vote in moderation (*phew*) bug

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sprint planning poker.",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register"
+    "test": "mocha --compilers js:babel-register",
+    "build": "babel src -d build/"
   },
   "dependencies": {
     "moment": "^2.18.1",
