--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "chat-bot-poker",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "Sprint planning poker.",
   "main": "build/index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-register",
-    "build": "babel src -d build/"
+    "build": "babel src -d build/",
+    "prepare": "npm test && npm run build"
   },
   "files": [
     "build"
